--- a/public/css/css.css
+++ b/public/css/css.css
@@ -74,14 +74,14 @@ html {
 
 .btn{
     background-color: transparent;
-    border: solid 2px rgb(255, 255, 255);
-    color:white;
+    border: solid 2px rgb(50, 50, 50);
+    color:rgb(0, 0, 0);
     transition: 0.6s;
     
 }
 
 .btn:hover{
-    background-color: #1E201E;
+    background-color: #000000;
     border: none;
     transform: scale(0.80);
 }
