--- a/public/css/css.css
+++ b/public/css/css.css
@@ -49,7 +49,7 @@ html {
 }
 
 .hero{
-    background: url('top-view-skewers-meat-fire.jpg') no-repeat center center;
+    background: url('/img/flipped_white_background_image.jpg') no-repeat center center fixed;
     background-size: cover;
     height: 100vh;
     position: relative;
